<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
	android:orientation="vertical">
	<include layout="@layout/layout_header"/>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scrollbars="none">
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:paddingLeft="20dp"
			android:paddingBottom="30dp"
			android:background="#171936">
			<ImageView
				android:id="@+id/announce_logo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:src="@drawable/logo"/>
			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:src="@drawable/bg"/>
			<TextView
				android:id="@+id/announce_linkcard"
				android:layout_below="@id/announce_logo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:text="@string/announce_linkcard"
				android:textColor="@color/text_orange"
				android:textSize="32sp"
				android:textStyle="bold"/>
			<TextView
				android:id="@+id/announce_release"
				android:layout_below="@id/announce_linkcard"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/announce_release"
				android:textColor="@color/white"
				android:textSize="36sp"
				android:textStyle="bold"/>
			<TextView
				android:id="@+id/announce_do_not_miss"
				android:layout_below="@id/announce_release"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/announce_do_not_miss"
				android:textColor="@color/white"
				android:textSize="28sp"
				android:textStyle="bold"/>
			<TextView
				android:id="@+id/announce_content_1"
				android:layout_below="@id/announce_do_not_miss"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:text="@string/announce_content_1"
				android:textColor="@color/white"
				android:textSize="14sp"/>
			<TextView
				android:id="@+id/announce_content_2"
				android:layout_below="@id/announce_content_1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/announce_content_2"
				android:textColor="@color/white"
				android:textSize="14sp"/>
			<TextView
				android:id="@+id/announce_content_3"
				android:layout_below="@id/announce_content_2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="@string/announce_content_3"
				android:textColor="@color/white"
				android:textSize="14sp"/>
			<TextView
				android:id="@+id/announce_content_4"
				android:layout_below="@id/announce_content_2"
				android:layout_toRightOf="@id/announce_content_3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginLeft="5dp"
				android:text="@string/announce_content_4"
				android:textColor="@color/text_orange"
				android:textSize="14sp"/>
			<TextView
				android:id="@+id/announce_content_5"
				android:layout_below="@id/announce_content_2"
				android:layout_toRightOf="@id/announce_content_4"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginLeft="5dp"
				android:text="@string/announce_content_5"
				android:textColor="@color/white"
				android:textSize="14sp"/>
			<TextView
				android:id="@+id/announce_title_normal_link"
				android:layout_below="@id/announce_content_3"
				android:layout_centerHorizontal="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="60dp"
				android:background="@drawable/biaoti"
				android:gravity="center"
				android:text="@string/announce_title_normal_link"
				android:textColor="@color/white"
				android:textSize="18sp"/>
			<ImageView
				android:id="@+id/announce_example_normal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_marginRight="20dp"
				android:layout_below="@+id/announce_title_normal_link"
				android:src="@drawable/example_normal"/>
			<TextView
				android:id="@+id/announce_content_6"
				android:layout_below="@id/announce_example_normal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:layout_centerHorizontal="true"
				android:text="@string/announce_content_6"
				android:textColor="@color/white"
				android:textSize="14sp"/>
			<TextView
				android:id="@+id/announce_content_7"
				android:layout_below="@id/announce_content_6"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_centerHorizontal="true"
				android:text="@string/announce_content_7"
				android:textColor="@color/white"
				android:textSize="14sp"/>
			<TextView
				android:id="@+id/announce_content_8"
				android:layout_below="@id/announce_content_7"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_centerHorizontal="true"
				android:text="@string/announce_content_8"
				android:textColor="@color/white"
				android:textSize="14sp"
				android:textStyle="bold"/>
			<TextView
				android:id="@+id/announce_content_9"
				android:layout_below="@id/announce_content_8"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:layout_centerHorizontal="true"
				android:text="@string/announce_content_9"
				android:textColor="@color/white"
				android:textSize="14sp"/>
			<TextView
				android:id="@+id/announce_content_10"
				android:layout_below="@id/announce_content_9"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_centerHorizontal="true"
				android:text="@string/announce_content_10"
				android:textColor="@color/white"
				android:textSize="14sp"/>
			<LinearLayout
				android:id="@+id/announce_content_11_container"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/announce_content_10"
				android:layout_marginTop="10dp"
				android:layout_centerHorizontal="true">
				<TextView
					android:id="@+id/announce_content_11"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/announce_content_11"
					android:textColor="@color/text_orange"
					android:textSize="14sp"/>
				<TextView
					android:id="@+id/announce_content_12"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="5dp"
					android:text="@string/announce_content_12"
					android:textColor="@color/white"
					android:textSize="14sp"/>
			</LinearLayout>
			<TextView
				android:id="@+id/announce_title_linkcard"
				android:layout_below="@id/announce_content_11_container"
				android:layout_centerHorizontal="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="60dp"
				android:background="@drawable/biaoti"
				android:gravity="center"
				android:text="@string/announce_linkcard"
				android:textColor="@color/white"
				android:textSize="18sp"/>
			<ImageView
				android:id="@+id/announce_example_linkcard"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:layout_marginRight="20dp"
				android:layout_below="@+id/announce_title_linkcard"
				android:src="@drawable/example_linkcard"/>
			<TextView
				android:id="@+id/announce_content_13"
				android:layout_below="@id/announce_example_linkcard"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:layout_centerHorizontal="true"
				android:text="@string/announce_content_13"
				android:textColor="@color/white"
				android:textSize="14sp"/>
			<TextView
				android:id="@+id/announce_content_14"
				android:layout_below="@id/announce_content_13"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="20dp"
				android:layout_centerHorizontal="true"
				android:text="@string/announce_content_14"
				android:textColor="@color/white"
				android:textSize="14sp"/>
			<LinearLayout
				android:id="@+id/announce_benefit_container_1"
				android:layout_below="@+id/announce_content_14"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:orientation="vertical">
				<ImageView
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:scaleType="centerInside"
					android:src="@drawable/mq"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:text="@string/announce_benefit_1"
					android:textStyle="bold"
					android:textColor="@color/white"
					android:textSize="14sp"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/announce_benefit_container_2"
				android:layout_below="@+id/announce_content_14"
				android:layout_centerHorizontal="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:orientation="vertical">
				<ImageView
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:scaleType="centerInside"
					android:src="@drawable/tsdj"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:text="@string/announce_benefit_2"
					android:textStyle="bold"
					android:textColor="@color/white"
					android:textSize="14sp"/>
			</LinearLayout>
			<LinearLayout
				android:id="@+id/announce_benefit_container_3"
				android:layout_below="@+id/announce_content_14"
				android:layout_alignParentRight="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="20dp"
				android:gravity="center_horizontal"
				android:orientation="vertical">
				<ImageView
					android:layout_width="60dp"
					android:layout_height="60dp"
					android:scaleType="centerInside"
					android:src="@drawable/zxnr"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:text="@string/announce_benefit_3"
					android:textStyle="bold"
					android:textColor="@color/white"
					android:textSize="14sp"/>
			</LinearLayout>
			<TextView
				android:id="@+id/announce_try_it"
				android:layout_below="@id/announce_benefit_container_1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="50dp"
				android:layout_marginBottom="30dp"
				android:layout_centerHorizontal="true"
				android:text="@string/announce_try_it"
				android:textColor="@color/white"
				android:textSize="14sp"/>
			<TextView
				android:id="@+id/btn_normal"
				android:layout_below="@+id/announce_try_it"
				android:layout_width="180dp"
				android:layout_height="40dp"
				android:gravity="center"
				android:layout_centerHorizontal="true"
				android:background="@drawable/btn_linkcard"
				android:text="@string/announce_txt_normal"
				android:textStyle="bold"
				android:textColor="@color/white"
				android:textSize="14sp"/>
			<TextView
				android:id="@+id/btn_linkcard"
				android:layout_below="@+id/btn_normal"
				android:layout_width="180dp"
				android:layout_height="40dp"
				android:layout_marginTop="20dp"
				android:gravity="center"
				android:layout_centerHorizontal="true"
				android:background="@drawable/btn_linkcard"
				android:text="@string/announce_txt_linkcard"
				android:textStyle="bold"
				android:textColor="@color/white"
				android:textSize="14sp"/>
		</RelativeLayout>
	</ScrollView>
</LinearLayout>
