<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/mobcommon_authorize_dialog_bg">
	<TextView
		android:id="@+id/mobcommon_authorize_dialog_title_tv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="15dp"
		android:paddingLeft="20dp"
		android:paddingRight="20dp"
		android:maxLines="2"
		android:textStyle="bold"
		android:textSize="18dp"
		android:textColor="#202122"
		tools:text="@string/mobcommon_authorize_dialog_title"/>
	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginTop="15dp"
		android:background="#F5F5F5"/>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">
		<TextView
			android:id="@+id/mobcommon_authorize_dialog_content_tv"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:paddingLeft="20dp"
			android:paddingRight="20dp"
			android:textSize="14dp"
			android:textColor="#555555"
			tools:text="@string/mobcommon_authorize_dialog_content"/>
	</ScrollView>
	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginTop="15dp"
		android:background="#F5F5F5"/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="45dp"
		android:gravity="center_vertical">
		<TextView
			android:id="@+id/mobcommon_authorize_dialog_reject_tv"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:background="@drawable/mobcommon_authorize_bottom_left_round_btn"
			android:textSize="18dp"
			android:textColor="#202122"
			android:text="@string/mobcommon_authorize_dialog_reject"/>
		<View
			android:layout_width="1dp"
			android:layout_height="match_parent"
			android:background="#F5F5F5"/>
		<TextView
			android:id="@+id/mobcommon_authorize_dialog_accept_tv"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:background="@drawable/mobcommon_authorize_bottom_right_round_btn"
			android:textSize="18dp"
			android:textColor="#FFFFFF"
			android:text="@string/mobcommon_authorize_dialog_accept"/>
	</LinearLayout>
</LinearLayout>
