<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:orientation="vertical">

    <!-- top_title -->
    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_height"
        android:background="@color/gray_black">

        <TextView
            android:id="@+id/txt_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="购物"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sdk_plus_24" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:background="@color/div_white" />

    </RelativeLayout>

    <!-- middle_title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@android:color/darker_gray">
        <TextView
            android:id="@+id/subhead"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/sdk_plus_24"
            android:textColor="@android:color/white"
            android:text="@string/tags_title"/>
        <TextView
            android:id="@+id/describe"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/sdk_plus_18"
            android:textColor="@android:color/white"
            android:text="@string/tags_content"/>
    </LinearLayout>

    <!-- function button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tags_sort"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_black"
            android:gravity="center"
            android:textSize="@dimen/sdk_plus_16"
            android:text="@string/tags_sort"/>
        <TextView
            android:id="@+id/tags_price"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_black"
            android:gravity="center"
            android:textSize="@dimen/sdk_plus_16"
            android:text="@string/tags_price"/>
        <TextView
            android:id="@+id/tags_classify"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_black"
            android:gravity="center"
            android:textSize="@dimen/sdk_plus_16"
            android:text="@string/tags_classify"/>

    </LinearLayout>

    <GridView
        android:id="@+id/gv_test"
        android:numColumns="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_5"
        android:horizontalSpacing="@dimen/margin_5"
        android:verticalSpacing="@dimen/margin_5"/>

</LinearLayout>