<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pass_bg">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25"
        android:background="@drawable/mq"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_below="@+id/imageView2"
        android:text="@string/password_show"
        android:textSize="@dimen/sdk_plus_16"
        android:textColor="@color/bg_black"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/check_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_below="@+id/textView"
        android:text="@string/check_details"
        android:textStyle="bold"
        android:background="@drawable/check"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_25"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_below="@+id/check_details"
        android:background="@drawable/pass_btn"
        android:text="@string/skip"
        android:textColor="@color/bg_black"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
